js dawhar hiisen bgaa shvv

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 
 /* Root Elements */
 :root {
-    --main-bg-color: #507DBC;
+    --main-bg-color: #70a401;
     --main-font-color: #3d3f56;
     --sub-bg-color: #AEEBDF;
     --sub-btn-color: #A3CEF1;
